# DataProcessing

./: .gitignore  CMakeLists.txt  DataProcessing.py  README.md  checkdbcfiles.py  config.yml  converter.py  convertto_km50.py  convertto_mf4.py  km50_converter.py  marple_api.py  marple_api_test.py  memorator_test.py  requirements.txt  testconverter.py
oldstuff/: convertto_km50.py  convertto_mf4.py  pfusch.py
src/: main.cpp
